--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "joi": "^17.12.2",
     "lint": "^0.8.19",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
